--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/opentable/bother",
   "dependencies": {
-    "commander": "^2.6.0",
+    "commander": "2.6.0",
+    "infinite-loop": "0.2.2",
     "ot-discovery": "0.2.2",
     "request": "2.53.0"
   }
